--- a/SchoolGallery/Views/Home/Category.cshtml
+++ b/SchoolGallery/Views/Home/Category.cshtml
@@ -14,27 +14,21 @@
     <title></title>
     <link rel="stylesheet" type="text/css" href="~/css/base.css" />
     <link rel="stylesheet" href="~/layui/css/layui.css">
-    <link rel="stylesheet" type="text/css" href="~/css/index.css" />
+    <link rel="stylesheet" type="text/css" href="~/css/school.css" />
 </head>
 
 <body>
-    
-    <div class="container">
-        <div class="layui-carousel" id="test1">
-            <div carousel-item="">
-                <div><img src="~/images/"></div>
-                <div><img src="//res.layui.com/images/layui/demo/2.png"></div>
-                <div><img src="//res.layui.com/images/layui/demo/3.png"></div>
-                <div><img src="//res.layui.com/images/layui/demo/4.png"></div>
-                <div><img src="//res.layui.com/images/layui/demo/5.png"></div>
-                <div><img src="//res.layui.com/images/layui/demo/6.png"></div>
-                <div><img src="//res.layui.com/images/layui/demo/7.png"></div>
-            </div>
-        </div>
-        <div class="header-wrap">
-            <ul class="layui-nav layui-bg-blue" lay-filter="">
 
-                @foreach (var item in Model.Items.Where(z => z.ParentID == -1))
+    <div class="banner"><img src="~/images/banner.jpg" /></div>
+
+   
+    <header>
+        <div class="header-wrap">
+            <ul class="layui-nav layui-bg-cyan" lay-filter="">
+                <li class="layui-nav-item">
+                    <a asp-action="Index">首页</a>
+                </li>
+                @foreach (var item in Model.CategoryItems.Where(z => z.ParentID == -1))
                 {
                     <li class="layui-nav-item">
                         <a asp-action="Category" asp-route-id="@item.ID">@item.Title</a>
@@ -44,51 +38,53 @@
 
             </ul>
         </div>
+    </header>
 
-        @functions
-        {
-        public string Tree(List<SchoolGallery.Models.CategoryModel> items, int parentID, int depth)
-        {
-            StringBuilder sb = new StringBuilder();
-            List<CategoryModel> temItem = items.Where(z => z.ParentID == parentID).ToList();
 
-            if (temItem.Count > 0)
+    @functions
+    {
+    public string Tree(List<SchoolGallery.Models.CategoryModel> items, int parentID, int depth)
+    {
+        StringBuilder sb = new StringBuilder();
+        List<CategoryModel> temItem = items.Where(z => z.ParentID == parentID).ToList();
+
+        if (temItem.Count > 0)
+        {
+
+            for (int i = 0; i < temItem.Count; i++)
             {
-
-                for (int i = 0; i < temItem.Count; i++)
+                if (items.Where(z => z.ParentID == temItem[i].ID).Count() > 0)
                 {
-                    if (items.Where(z => z.ParentID == temItem[i].ID).Count() > 0)
-                    {
-                        sb.Append("<li class=\"layui-nav-item\">");
-                        sb.Append("<a href=\"javascript:; \">");
-                        sb.Append(temItem[i].Title);
-                        sb.Append("</a>");
-                        sb.Append("<dl class=\"layui-nav-child\">");
-                        sb.Append("<dd>");
-                        sb.Append(Tree(items, temItem[i].ID, depth + 1));
-                        sb.Append("</dd>");
-                        sb.Append("</dl>");
-                        sb.Append("</li>");
-                    }
-                    else
-                    {
-                        sb.Append("<li class=\"layui-nav-item\">");
-                        sb.AppendFormat("<a href=\"/home/categoryinfo/{0} \" target=\"main\">{1}</a>", temItem[i].ID, temItem[i].Title);
-                        sb.Append("</li>");
-                    }
+                    sb.Append("<li class=\"layui-nav-item\">");
+                    sb.Append("<a href=\"javascript:; \">");
+                    sb.Append(temItem[i].Title);
+                    sb.Append("</a>");
+                    sb.Append("<dl class=\"layui-nav-child\">");
+                    sb.Append("<dd>");
+                    sb.Append(Tree(items, temItem[i].ID, depth + 1));
+                    sb.Append("</dd>");
+                    sb.Append("</dl>");
+                    sb.Append("</li>");
                 }
-
+                else
+                {
+                    sb.Append("<li class=\"layui-nav-item\">");
+                    sb.AppendFormat("<a href=\"/home/categoryinfo/{0} \" target=\"main\">{1}</a>", temItem[i].ID, temItem[i].Title);
+                   // sb.AppendFormat("<a href=\"{0} \" >{1}</a>", temItem[i].ID, temItem[i].Title);
+                    sb.Append("</li>");
+                }
             }
 
-            return sb.ToString();
+        }
 
-        }
-        }
+        return sb.ToString();
+
+    }
+    }
+    <div class="container">
         <div class="nav-left">
-            <ul class="layui-nav layui-nav-tree  layui-bg-blue">
-                <a href="javascript:;">&nbsp;</a>
-                @Html.Raw(Tree(Model.Items, Model.SelectID, 0))
-
+            <ul class="layui-nav layui-nav-tree layui-bg-cyan" >
+                @Html.Raw(Tree(Model.CategoryItems, Model.SelectID, 0))
             </ul>
         </div>
 
@@ -96,32 +92,24 @@
             <div class="top-site">
                 <ul class="site">
                     <li>当前位置：</li>
-                    <li>学校提升</li>
+                    <li>@Model.Title</li>
                 </ul>
             </div>
-            <div class="btn-login">点击登陆</div>
-        </div>
+            <a class="btn-login" href="/login/login">点击登陆</a>
 
-        <div>
-            <iframe frameborder="0" src="" id="main" name="main" width="720px" height="650px"></iframe>
+            <div class="content">
+                <iframe id="main" name="main" src="/home/CategoryInfo/@Model.SelectID" frameborder="0" width="780px" height="800px"></iframe>
+            </div>
         </div>
     </div>
 
-    @*<footer></footer>*@
+
+
+    <footer></footer>
+
     <script type="text/javascript" src="~/js/jquery-1.12.4.min.js"></script>
     <script src="~/layui/layui.js"></script>
     <script type="text/javascript" src="~/js/index.js"></script>
-    <script>
-        layui.use('carousel', function () {
-            var carousel = layui.carousel;
-            //建造实例
-            carousel.render({
-                elem: '#test1'
-                , width: '100%' //设置容器宽度
-                , arrow: 'hover' //始终显示箭头
-                //,anim: 'updown' //切换动画方式
-            });
-        });
-    </script>
 </body>
+
 </html>
