--- a/SchoolGallery/wwwroot/css/base.css
+++ b/SchoolGallery/wwwroot/css/base.css
@@ -23,3 +23,25 @@ html,body{
 	height: 100%;
 	min-height: 100%;
 }
+/*公共样式*/
+body{
+	width: 100%;
+}
+.banner{
+	width: 100%;
+	height: 200px;
+}
+.banner img{
+	width: 100%;
+	height: 100%;
+}
+header{
+	width: 100%;
+	height: 60px;
+	background-color: #2F4056;
+}
+.header-wrap{
+	width: 1000px;
+	height: 100%;
+	margin: 0 auto;
+}
