--- a/SchoolGallery/Views/Home/Detail.cshtml
+++ b/SchoolGallery/Views/Home/Detail.cshtml
@@ -16,7 +16,7 @@
 
 </head>
 <body>
-    <h2>@Model.Title</h2>
+    <h2  style="align-items:center; align-content:center;text-align:center;">@Model.Title</h2>
     <hr />
 
     <div>
