--- a/SchoolGallery/Views/Category/Create.cshtml
+++ b/SchoolGallery/Views/Category/Create.cshtml
@@ -8,7 +8,17 @@
 <h2 class="site-h1">创建分类</h2>
 
 <hr />
-
+@if (ViewBag.isSuccess != null)
+{
+    if (ViewBag.isSuccess)
+    {
+        <h3> 添加成功</h3>
+    }
+    else
+    {
+        <h3> 添加失败</h3>
+    }
+}
 <form class="layui-form" asp-action="Create">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="layui-form-item">
@@ -41,7 +51,7 @@
             <span asp-validation-for="PassWord" class="layui-bg-red"></span>
         </div>
 
-    </div> 
+    </div>
 
     <div class="layui-form-item">
         <div class="layui-input-block">
