--- a/SchoolGallery/Views/Home/Detail.cshtml
+++ b/SchoolGallery/Views/Home/Detail.cshtml
@@ -16,7 +16,9 @@
 
 </head>
 <body>
-    <h2  style="align-items:center; align-content:center;text-align:center;">@Model.Title</h2>
+    <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
+    <script src="https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>
+    <h2 style="align-items:center; align-content:center;text-align:center;">@Model.Title</h2>
     <hr />
 
     <div>
