--- a/SchoolGallery/Views/Login/Login.cshtml
+++ b/SchoolGallery/Views/Login/Login.cshtml
@@ -37,7 +37,7 @@
                     <div class="layui-form-item">
                         <label class="layui-form-label">密码</label>
                         <div class="layui-input-inline">
-                            <input class="layui-input" id="InputPassWord" placeholder="密码" asp-for="PassWord" />
+                            <input class="layui-input" type="password" id="InputPassWord" placeholder="密码" asp-for="PassWord" />
                         </div>
                     </div>
                     <div class="layui-form-item">
