--- a/SchoolGallery/Views/Home/Index.cshtml
+++ b/SchoolGallery/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>验收专题</title>
     <link rel="stylesheet" type="text/css" href="~/css/base.css" />
     <link rel="stylesheet" href="~/layui/css/layui.css">
     <link rel="stylesheet" type="text/css" href="~/css/index.css" />
@@ -19,7 +19,18 @@
 <body>
     <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
     <script src="https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>
-    <div class="banner"><img src="~/images/banner.jpg" /></div>
+    <div class="hdd">
+        <div class="header">
+            <div class="lop" style="padding-top:15px;">
+                <img id="Image1" src="~/images/logo.png" style="margin-left: 10px" />
+            </div>
+            <div class="blank30">
+            </div>
+            <div class="tp">
+                <img id="Image2" src="~/images/banner.png" style="height:70px;width:711px;" />
+            </div>
+        </div>
+    </div>
 
     <header>
         <div class="header-wrap">
@@ -43,10 +54,12 @@
         <ul class="container">
             @foreach (var item in Model)
             {
+                var ImgUrl = "images/ic" + @item.ID + ".png";
+                var CssClass = "ic" + item.ID;
                 <li class="module-item">
-                    <div class="item-img-wrap">
-                        <img src="~/images/detial_no_pic.png" />
-                    </div>
+                    <div class="@CssClass">
+                        <a asp-action="Category" asp-route-id="@item.ID"><img src="@ImgUrl" width: 149px; height: 151px; /></a>
+</div>
                     <div class="test"><a asp-action="Category" asp-route-id="@item.ID">@item.Title</a></div>
                 </li>
             }
@@ -55,7 +68,18 @@
         </ul>
     </div>
 
-    <footer></footer>
+    <div class="footer">
+        <p>
+            CopyRight © lnykzz.cn. All Right Reserved 营口市中等专业学校 版权所有
+        </p>
+        <p>
+            辽宁省营口市西市区渤海大街西30号　电话：0417-3308018
+        </p>
+        <p>
+            辽ICP备14001482号-1
+        </p>
+        <a class="btn-login" href="/login/login">点击登陆</a>
+    </div>
 
     <script type="text/javascript" src="js/jquery-1.12.4.min.js"></script>
     <script src="layui/layui.js"></script>
