--- a/SchoolGallery/Views/Login/Login.cshtml
+++ b/SchoolGallery/Views/Login/Login.cshtml
@@ -56,14 +56,14 @@
 
     <div class="footer" id="foot">
         <div class="copyright">
-            <p>Copyright © xxxxxxx</p>
+            CopyRight © lnykzz.cn. All Right Reserved 营口市中等专业学校 版权所有
         </div>
 
     </div>
 
 
 </body>
-
+</html>
 @*<body class="layui-layout-body">
         <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
         <script src="https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>
