--- a/SchoolGallery/Views/Category/Create.cshtml
+++ b/SchoolGallery/Views/Category/Create.cshtml
@@ -24,7 +24,7 @@
     <div class="layui-form-item">
         <label asp-for="Title" class="layui-form-label"></label>
         <div class="layui-input-block">
-            <input asp-for="Title" class="layui-input" />
+            <input asp-for="Title" class="layui-input" value="@ViewBag.InputTitle" />
             <span asp-validation-for="Title" class="layui-bg-red"></span>
         </div>
     </div>
