--- a/SchoolGallery/Views/Shared/_BSLayout.cshtml
+++ b/SchoolGallery/Views/Shared/_BSLayout.cshtml
@@ -12,7 +12,7 @@
     <script src="https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>
     <div class="layui-layout layui-layout-admin">
         <div class="layui-header">
-            <div class="layui-logo">xxxxx后台</div>
+            <div class="layui-logo">验收专题网站后台</div>
             <!-- 头部区域（可配合layui已有的水平导航） -->
             <ul class="layui-nav layui-layout-left">
                 <li class="layui-nav-item"><a asp-area="" asp-controller="Category" asp-action="Index">分类管理</a></li>
@@ -41,7 +41,7 @@
 
         <div class="layui-footer">
             <!-- 底部固定区域 -->
-            © xxxx
+            CopyRight © lnykzz.cn. All Right Reserved 营口市中等专业学校 版权所有
         </div>
     </div>
 
