--- a/SchoolGallery/Views/_ViewImports.cshtml
+++ b/SchoolGallery/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using SchoolGallery
 @using SchoolGallery.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, PagedList.Core.Mvc
