--- a/SchoolGallery/Views/Content/Index.cshtml
+++ b/SchoolGallery/Views/Content/Index.cshtml
@@ -1,10 +1,13 @@
-﻿@model IEnumerable<SchoolGallery.Models.ContentModel>
+﻿@using PagedList.Core;
+@using PagedList.Core.Mvc;
+@model IPagedList<SchoolGallery.Models.ContentModel>
 
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_BSLayout.cshtml";
 }
 
+<link rel="stylesheet" type="text/css" href="~/lib/bootstrap/dist/css/bootstrap.css" />
 <h2 class="site-h1">内容管理</h2>
 <hr>
 <p class="layui-btn layui-btn-primary">
@@ -14,47 +17,49 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Title)
+                @Html.DisplayNameFor(model => model.FirstOrDefault().Title)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Detail)
+                @Html.DisplayNameFor(model => model.FirstOrDefault().Detail)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CategoryID)
+                @Html.DisplayNameFor(model => model.FirstOrDefault().CategoryID)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Accessories)
+                @Html.DisplayNameFor(model => model.FirstOrDefault().Accessories)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Sort)
+                @Html.DisplayNameFor(model => model.FirstOrDefault().Sort)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Detail)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CategoryID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Accessories)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Sort)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ID">编辑</a> |
-               @* <a asp-action="Details" asp-route-id="@item.ID">Details</a> |*@
-                <a asp-action="Delete" asp-route-id="@item.ID">删除</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Title)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Detail)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CategoryID)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Accessories)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Sort)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.ID">编辑</a> |
+                    @* <a asp-action="Details" asp-route-id="@item.ID">Details</a> |*@
+                    <a asp-action="Delete" asp-route-id="@item.ID">删除</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
+<pager list="Model" options="@PagedListRenderOptions.TwitterBootstrapPager" asp-action="index" asp-controller="Content" param-page-number="pageNum" asp-route-id="@ViewBag.ID"></pager>
