--- a/SchoolGallery/Views/Shared/_BSLayout.cshtml
+++ b/SchoolGallery/Views/Shared/_BSLayout.cshtml
@@ -18,6 +18,7 @@
                 <li class="layui-nav-item"><a asp-area="" asp-controller="Category" asp-action="Index">分类管理</a></li>
                 <li class="layui-nav-item"><a asp-area="" asp-controller="Content" asp-action="Index">内容管理</a></li>
                 <li class="layui-nav-item"><a asp-area="" asp-controller="Video" asp-action="Index">视频管理</a></li>
+                <li class="layui-nav-item"><a asp-area="" asp-controller="Admin" asp-action="ChangePW">修改密码</a></li>
             </ul>
 
         </div>
@@ -28,6 +29,7 @@
                     <li class="layui-nav-item"><a asp-area="" asp-controller="Category" asp-action="Index">分类管理</a></li>
                     <li class="layui-nav-item"><a asp-area="" asp-controller="Content" asp-action="Index">内容管理</a></li>
                     <li class="layui-nav-item"><a asp-area="" asp-controller="Video" asp-action="Index">视频管理</a></li>
+                    <li class="layui-nav-item"><a asp-area="" asp-controller="Admin" asp-action="ChangePW">修改密码</a></li>
                 </ul>
             </div>
         </div>
